2005-06-30  Juri Linkov  <juri@jurta.org>

	* xdisp.c (x_draw_vertical_border): If left fringe is not present
	decrease x coord of vertical border by 1 pixel to not occupy text
	area of the right window.

	* xterm.c (x_draw_vertical_window_border): Use foreground of
	VERTICAL_BORDER_FACE_ID for vertical border line.

	* term.c (turn_on_face): In standout mode apply specified
	fg to bg, and specified bg to fg (this makes the logic of
	inversion on terminal consistent with X).

2005-06-29  Juanma Barranquero  <lekktu@gmail.com>

	* eval.c (user_variable_p_eh): New function.
	(Fuser_variable_p): Use it.  Clarify docstring.
	Return t for aliases of user options, nil for alias loops.

2005-06-27  Richard M. Stallman  <rms@gnu.org>

	* eval.c (Fdefvar): Improve error message.

2005-06-27  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macterm.c [USE_CARBON_EVENTS] (mac_convert_event_ref): Fix last
	change.

2005-06-27  Juanma Barranquero  <lekktu@gmail.com>

	* eval.c (Fdefvar): Don't try to set constant symbols.

2005-06-25  Richard M. Stallman  <rms@gnu.org>

	* macfns.c (Fx_show_tip): Pass new arg to try_window.

	* w32fns.c (Fx_show_tip): Pass new arg to try_window.

	* xfns.c (Fx_show_tip): Pass new arg to try_window.

	* xdisp.c (try_window): New arg CHECK_MARGINS.  Calls changed.
	(redisplay_window): Handle try_window reporting point in scroll margin.

	* dispextern.h (try_window): Declare new arg.

	* fileio.c (Fcopy_file): New arg PRESERVE_UID_GID.
	Use fchmod to copy the file modes.
	(Frename_file): Don't copy UID and GID here;
	instead, specify t for PRESERVE_UID_GID when calling Fcopy_file.

	* eval.c (call_debugger): Take full care of extending stack limits
	to make space for the debugger, and restore the change afterward.
	Bind debug-on-error to nil.
	(restore_stack_limits): New subroutine.
	(Fsignal): Extend specpdl bound along with eval depth bound,
	for calling edebug.  Don't do either one, for calling debugger.