@@ -1,3 +1,8 @@
+2005-07-01  Masatake YAMATO  <jet@gyve.org>
+
+	* emacs.c (main): Passing ADD_NO_RANDOMIZE to
+	`personality'.
+
 2005-06-30  Juri Linkov  <juri@jurta.org>
 
 	* xdisp.c (x_draw_vertical_border): If left fringe is not present
